--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<h1 role="heading">Accessible Portfolio</h1>
 	<nav role="navigation">
-		
+		<li role="listitem">1</li>
+		<li role="listitem">2</li>
+		<li role="listitem">3</li>
 	</nav>
 	<ul>
 		<li role="listitem">1</li>
