--- a/main.html
+++ b/main.html
@@ -10,17 +10,20 @@
 	<!-- the entire body must be written by student -->
 	<h1 role="heading">Accessible Portfolio</h1>
 	<nav role="navigation">
-		<li role="listitem">1</li>
-		<li role="listitem">2</li>
-		<li role="listitem">3</li>
+		<ul>
+		<li role="listitem">abc</li>
+		<li role="listitem">def</li>
+		<li role="listitem">xyz</li>
+		</ul>
 	</nav>
 	<ul>
 		<li role="listitem">1</li>
 		<li role="listitem">2</li>
 		<li role="listitem">3</li>
 	</ul>
-	<img src="https://c.pxhere.com/photos/d1/ac/cascade_cloudy_environment_falls_lake_landscape_mountain_range_mountains-1174399.jpg!d" alt="brief description" role="img">
-    <script type="text/javascript" src="./script.js">
+	<img src="https://c.pxhere.com/photos/d1/ac/cascade_cloudy_environment_falls_lake_landscape_mountain_range_mountains-1174399.jpg!d" alt="portfolio" role="img">
+    <p>brief description</p>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
