--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1 role="heading">Accessible Portfolio</h1>
+	<header role="heading">
+		<h1>Accessible Portfolio</h1>
+		<header role="heading">
 	<nav role="navigation">
 		<ul>
 		<li role="listitem">abc</li>
