--- a/main.html
+++ b/main.html
@@ -8,9 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<header role="heading">
-		<h1>Accessible Portfolio</h1>
-		<header role="heading">
+	<h1 role="heading">Accessible Portfolio</h1>
+		
 	<nav role="navigation">
 		<ul>
 		<li role="listitem">abc</li>
