--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
 		<li role="listitem">xyz</li>
 		</ul>
 	</nav>
+	<main>
 	<ul>
 		<li role="listitem">1</li>
 		<li role="listitem">2</li>
@@ -24,6 +25,7 @@
 	</ul>
 	<img src="https://c.pxhere.com/photos/d1/ac/cascade_cloudy_environment_falls_lake_landscape_mountain_range_mountains-1174399.jpg!d" alt="portfolio" role="img">
     <p>brief description</p>
+	</main>
 	<script type="text/javascript" src="./script.js">
 </script>
 
