--- a/main.html
+++ b/main.html
@@ -18,13 +18,16 @@
 		</ul>
 	</nav>
 	<main>
-	<ul>
-		<li role="listitem">1</li>
-		<li role="listitem">2</li>
-		<li role="listitem">3</li>
-	</ul>
+	
 	<img src="https://c.pxhere.com/photos/d1/ac/cascade_cloudy_environment_falls_lake_landscape_mountain_range_mountains-1174399.jpg!d" alt="portfolio" role="img">
     <p>brief description</p>
+
+		<ul role="list">
+			<li role="listitem">1</li>
+			<li role="listitem">2</li>
+			<li role="listitem">3</li>
+		</ul>
+		
 	</main>
 	<script type="text/javascript" src="./script.js">
 </script>
